Highlight config profiles (#32)

--- a/src/assets/stylesheets/modules/common.module.scss
+++ b/src/assets/stylesheets/modules/common.module.scss
@@ -384,6 +384,20 @@
     }
   }
 
+  &__section-clickable {
+    pointer-events: initial;
+  }
+
+  &__icon {
+    color: var(--mantine-color-dark-3);
+    height: 20px;
+    width: 50px;
+  }
+
+  &__icon-button {
+    cursor: pointer;
+  }
+
   &__textarea {
     padding-top: 30px;
   }
@@ -654,7 +668,7 @@
   }
 
   &__duration {
-    background-color: rgb(0 0 0 / 50%);
+    background-color: rgb(0 0 0 / 70%);
     border-radius: 5px;
     bottom: 10px;
     color: var(--text-secondary);
