--- a/src/assets/stylesheets/base.scss
+++ b/src/assets/stylesheets/base.scss
@@ -5,6 +5,14 @@ body {
   background: var(--background-primary);
   color: var(--text-secondary);
   font-family: Inter, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+  --mantine-font-family: Inter, system-ui, "Segoe UI", roboto, helvetica, arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  position: relative;
+}
+
+#root {
+  position: absolute;
+  inset: 0 0 0 0;
 }
 
 .page-container {
