--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -137,11 +137,10 @@
   align-items: center;
   display: flex;
   padding: 5px;
-  position: relative;
 
   &__search-icon {
     height: 20px;
-    margin-right: 20px;
+    margin-right: 10px;
     max-height: 20px;
     max-width: 20px;
     min-height: 20px;
@@ -156,11 +155,56 @@
     }
   }
 
+  &__music-switch {
+    cursor: pointer;
+
+    * {
+      --switch-width: 90px;
+      --switch-height: 50px;
+      --switch-thumb-size: 40px;
+      --switch-track-label-padding: 5px;
+      --switch-thumb-bd: 0 !important;
+    }
+
+    &--inactive {
+      * {
+        --switch-bg: var(--background-input) !important;
+        --switch-bd: var(--background-input) !important;
+        --switch-thumb-bg: var(--background-toolbar--active);
+        --switch-thumb-bd: 0 !important;
+
+        color: var(--text-secondary);
+      }
+    }
+
+    &--active {
+      * {
+        --switch-bg: var(--background-search-input) !important;
+        --switch-bd: var(--background-search-input) !important;
+        --switch-thumb-bg: var(--color-highlight);
+
+        color: var(--text-primary);
+      }
+    }
+  }
+
+  &__music-switch-label {
+    display: none;
+  }
+}
+
+.search-input-container {
+  align-items: center;
+  display: flex;
+  padding: 5px;
+  position: relative;
+  width: 100%;
+
   &__button-left {
     align-items: center;
     display: flex;
     justify-content: center;
-    left: 60px;
+    left: 30px;
     position: absolute;
   }
 
