--- a/src/assets/stylesheets/modules/lists.module.scss
+++ b/src/assets/stylesheets/modules/lists.module.scss
@@ -192,7 +192,7 @@
   align-items: center;
   background-color: var(--background-secondary);
   display: grid;
-  gap: 15px;
+  gap: 10px;
   grid-template-columns: 80px 1fr 50px;
   height: 80px;
   overflow: hidden;
@@ -223,6 +223,7 @@
     flex-direction: column;
     font-size: 18px;
     gap: 2px;
+    margin: 0;
   }
 
   .entity-card__title {
