--- a/src/assets/stylesheets/modules/search.module.scss
+++ b/src/assets/stylesheets/modules/search.module.scss
@@ -1,9 +1,8 @@
 .search-result {
   &--selected {
-    border: 1px solid var(--color-highlight);
+    background-color: var(--background-search-input);
     border-radius: 5px;
-    box-shadow: 0 0 6px var(--color-highlight);
-    padding: 5px;
+    box-shadow: 0 0 6px var(--background-search-input);
   }
 
   &__score {
@@ -17,13 +16,31 @@
 }
 
 .result-page {
-  max-height: calc(100vh - 125px);
+  max-height: calc(100vh - 145px);
   overflow: hidden;
   padding-top: 10px;
 
   &__side-panel {
+    gap: 15px 0;
     margin-right: 10px;
-    padding: 0 5px 50px;
+    padding: 10px 0 50px;
+
+    .search-result {
+      padding: 10px;
+    }
+  }
+
+  &__grouped-side-panel {
+    margin-right: 10px;
+
+    .search-result {
+      padding: 10px;
+    }
+  }
+
+  &__grouped-side-panel-list {
+    gap: 5px 0;
+    padding: 10px 0;
   }
 }
 
