--- a/src/assets/stylesheets/modules/shared.module.scss
+++ b/src/assets/stylesheets/modules/shared.module.scss
@@ -381,3 +381,28 @@
     padding: 0;
   }
 }
+
+.grouped-entity-list {
+  display: grid;
+  gap: 30px;
+  height: max-content;
+  max-height: 100%;
+  overflow-y: auto;
+  padding: 0 10px 30px;
+  scrollbar-gutter: stable;
+
+  &__title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+
+  &--small {
+    gap: 15px;
+    padding-inline: 0;
+
+    .grouped-entity-list__title {
+      font-size: 18px;
+    }
+  }
+}
