Switch tag filter to explicit update ; Ensure search results are discarded if outdated

--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -137,17 +137,22 @@
     }
   }
 
-  &__button {
+  &__index-button {
     align-items: center;
     color: var(--text-tertiary);
     display: flex;
-    height: 20px;
     justify-content: center;
-    position: absolute;
-    width: 20px;
 
     &--active {
       color: var(--text-highlight);
+
+      * {
+        color: var(--text-highlight);
+      }
+    }
+
+    &--side-panel {
+      margin-left: 10px;
     }
   }
 
