--- a/src/assets/stylesheets/modules/video.module.scss
+++ b/src/assets/stylesheets/modules/video.module.scss
@@ -155,6 +155,22 @@
     position: absolute;
     right: 10px;
   }
+
+  &__timecode-offset {
+    align-items: center;
+    border-radius: 5px;
+    display: flex;
+    font-family: var(--font-monospace);
+    font-size: 12px;
+    font-weight: 600;
+    margin-right: 10px;
+    padding: 3px 5px;
+
+    &--active {
+      background-color: var(--color-highlight);
+      color: var(--text-primary);
+    }
+  }
 }
 
 .play-pause {
