Fix issue listing objects in libraries

--- a/src/assets/stylesheets/modules/browser.module.scss
+++ b/src/assets/stylesheets/modules/browser.module.scss
@@ -344,6 +344,11 @@
     justify-content: center;
   }
 
+  &--empty {
+    min-height: 200px;
+    color: var(--text-tertiary);
+  }
+
   &--with-active-item {
     min-height: calc(9 * var(--row-height));
   }
