Add show from playhead option for sidebar tags

--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -340,7 +340,8 @@
   color: var(--text-tertiary);
   display: flex;
   font-size: 10px;
-  margin-left: 15px
+  justify-content: space-between;
+  margin-inline: 15px;
 }
 
 .track-options {
