--- a/src/assets/stylesheets/modules/side-panel.module.scss
+++ b/src/assets/stylesheets/modules/side-panel.module.scss
@@ -545,9 +545,10 @@
 
   &__actions {
     display: flex;
+    flex-grow: 1;
     gap: 5px;
     height: 100%;
-    justify-content: center;
+    justify-content: flex-end;
     padding: 10px 5px 10px 10px;
     width: 55px;
   }
